--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div style="text-align: center">
   <h1>Welcome to {{title}}</h1>
 </div>
-<app-user></app-user>
-<app-dashboard></app-dashboard>
+<app-user [name]="'Andrei'"></app-user>
