Outputting Lists with ngFor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="text-align: center">
   <h1>Welcome to {{title}}</h1>
 </div>
-<!-- <h2>Assignment 2</h2>
-<app-cart [items]="rootItems" (buttonClickEvent)="onButtonClick($event)"></app-cart> -->
+<h2>Assignment 2</h2>
+<app-cart [items]="rootItems" (buttonClickEvent)="onButtonClick($event)"></app-cart>
 
 <app-user [name]="rootName" (nameChanged)="onNameChanged($event)"></app-user>
