--- a/src/app/assignments/cart/cart.component.html
+++ b/src/app/assignments/cart/cart.component.html
@@ -5,7 +5,6 @@
 <hr>
 
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let item of items">
-    {{item}}
-  </li>
+  <li class="list-group-item" *ngFor="let item of items; let i = index"
+    [ngStyle]="{backgroundColor: i % 2 === 0 ? 'yellow' : 'blue'}">{{item}}</li>
 </ul>
