--- a/src/app/assignments/cart/cart.component.html
+++ b/src/app/assignments/cart/cart.component.html
@@ -2,6 +2,7 @@
 <button (click)="onClick()" class="btn" [ngClass]="{'btn-primary': item !== '', 'btn-default': item === ''}">Add
   Item</button>
 
+<p *ngIf="item === ''">Please enter a value!</p>
 <hr>
 
 <ul class="list-group">
